# cython_test

./: meson.build  pyproject.toml
scripts/: linting.sh
src/cython_test/: argmax_fast.c  argmax_fast.html  argmax_fast.pyx  argmax_fast_v2.c  argmax_fast_v2.html  argmax_fast_v2.pyx  argmax_utils.py  cythoner.py  meson.build  np_argmax.py  setup.py  test.ipynb
