[project]
name = "cython_test"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Chin-Hsuan Sun", email = "dicky10311111@gmail.com"},
]
dependencies = [
    "Cython>=3.0.10",
    "ipykernel>=6.29.4",
    "numpy>=1.24.4",
    "cython-lint>=0.16.2",
    "ruff>=0.4.4",
    "meson-python>=0.16.0",
    "wheel>=0.43.0",
    "auditwheel>=6.0.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
# max line length for black
line-length = 88
target-version = "py38"

[tool.ruff.lint]
# all rules can be found here: https://beta.ruff.rs/docs/rules/
select = ["E", "F", "W", "I"]
ignore=[
    # space before : (needed for how black formats slicing)
    "E203",
    # do not assign a lambda expression, use a def
    "E731",
    # do not use variables named 'l', 'O', or 'I'
    "E741",
]

[tool.cython-lint]
# Ignore the same error codes as ruff
# + E501 (line too long) because keeping it < 88 in cython
# often makes code less readable.
ignore = [
    # multiple spaces/tab after comma
    'E24',
    # space before : (needed for how black formats slicing)
    'E203',
    # line too long
    'E501',
    # do not assign a lambda expression, use a def
    'E731',
    # do not use variables named 'l', 'O', or 'I'
    'E741',
    # line break before binary operator
    'W503',
    # line break after binary operator
    'W504',
]

[tool.pdm.options]
install = ["--no-isolation"]

[tool.pdm]
distribution = true
